--- a/index.html
+++ b/index.html
@@ -6,31 +6,115 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/styles.css">
+    <script src="https://kit.fontawesome.com/b3fc0acd33.js" crossorigin="anonymous"></script>
     <title> Assignment 11 </title>
 </head>
 
 <body>
     <div class="into-div">
-        <a href=""> Contact</a>
+        <p class="tag"> Contact </p>
         <br> <br>
         <h1> Contact us to get free support </h1>
     </div>
 
     <form>
-        <textarea name="" id="">
-           Description 
-        </textarea>
+        <textarea name="" id="" placeholder="Description"></textarea>
 
         <div>
-            <input type="text" id="subject">
-            <input type="text" id="name">
-            <input type="email" id="@">
+            <input type="text" id="subject" placeholder="Subject">
+            <input type="text" id="name" placeholder="Name/Surname">
+            <input type="email" id="@" placeholder="Email">
             <input type="submit" value="Send">
         </div>
     </form>
 
+    <section>
+        <div class="divs">
+            <div class="icon-container">
+                <i class="fa-solid fa-envelope icon"></i>
+            </div>
+            <h1 class="contact-h1"> Email </h1>
+            <p class="contact-p"> education@yahoo.edu.ge </p>
+            <p class="contact-p"> edu.e.education@yahoo.edu.ge </p>
+        </div>
+        <div class="divs">
+            <div class="icon-container2">
+                <i class="fa-solid fa-phone icon2"></i>
+            </div>
+            <h1 class="contact-h1"> Email </h1>
+            <p class="contact-p"> +995 591 66 6456 </p>
+            <p class="contact-p"> +995 591 66 6456 </p>
+        </div>
+        <div class="divs">
+            <div class="icon-container3">
+                <i class="fa-solid fa-location-dot icon3"></i>
+            </div>
+            <h1 class="contact-h1"> Email </h1>
+            <p class="contact-p"> Mail str, Chicago iinois </p>
+            <p class="contact-p"> Main street, New York City </p>
+        </div>
+    </section>
 
+    <div class="photos">
+        <p> Photos </p>
+        <h1> See our latest photos
+            from restaurant and hotel </h1>
+    </div>
 
+    <main>
+        <div class="image1"></div>
+        <div class="image2"></div>
+        <div class="image3"></div>
+    </main>
+
+    <footer>
+        <div class="left-side">
+            <h1> Zwtta Hotels </h1>
+            <br>
+            <p> Our hotel in on teh huge quality
+                and proffesionalism and with hard
+                work and cearing. You can accept
+                only the best services from our stuff</p>
+            <br>
+            <br>
+            <img class="footer-img1" src="images/facebook.svg" alt="">
+            <img class="footer-img2" src="images/twitter.svg" alt="">
+            <img class="footer-img3" src="images/googleplus.svg" alt="">
+        </div>
+        <div class="right-side">
+            <div>
+                <h1 class="footer-h1"> Useful links </h1>
+                <a class="footer-a" href=""> Blog </a>
+                <a class="footer-a" href=""> Rooms </a>
+                <a class="footer-a" href=""> Gift Card</a>
+                <a class="footer-a" href=""> Testimonials</a>
+            </div>
+            <div>
+                <h1 class="footer-h1"> Privacy </h1>
+                <a class="footer-a" href=""> Career </a>
+                <a class="footer-a" href=""> About us </a>
+                <a class="footer-a" href=""> About us </a>
+                <a class="footer-a" href=""> Services </a>
+            </div>
+            <div>
+                <h1 class="footer-h1"> Contact Info </h1>
+                <a class="footer-a-icon" href="">
+                    <i class="fa-solid fa-envelope footer-envelope"></i>
+                    info@yahoo.com
+                </a>
+                <a class="footer-a-icon" href="">
+                    <i class="fa-solid fa-phone footer-phone"></i>
+                    + 995 591111 999
+
+                </a>
+                <a class="footer-a-icon" href="">
+                    <i class="fa-solid fa-location-dot footer-location"></i>
+                    Main str. Chicago Illinois
+
+                </a>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
